# likable

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.complex  README.md  app.py  coding_agent.py  kiss_agent.py  manager_agent.py  nginx.conf  planning_agent.py  pyproject.toml  requirements.txt  run_local.py  settings.py  start.sh  supervisord.conf  test_testing_agent.py  testing_agent.py  ui_helpers.py  utils.py
sandbox/: app.py
src/: coding_agent.py  manager_agent.py  planning_agent.py  test_coding_agent.py  test_gradio_manager.py  test_manager_agent.py  test_planning_agent.py
