[project]
name = "likable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.0.2",
    "gradio>=5.32.0",
    "mcp>=1.9.2",
    "smolagents[litellm,mcp]>=1.17.0",
    "selenium>=4.25.0",
    "requests>=2.32.0",
    "watchdog>=5.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.workspace]
members = [
    "sandbox/gradio_app",
    "sandbox/sandbox/gradio_app",
    "test_sandbox/test_project",
    "sandbox/calculator_app",
    "sandbox/gradio_calculator",
    "sandbox/gradio_calculator_app",
    "sandbox/simple_calculator", "sandbox/todo_list_app", "sandbox/calculator", "sandbox/todo_app", "sandbox/gradio_todo_app", "sandbox/gradio_hello_world", "sandbox/sandbox/todo-app", "sandbox/to_do_list_app", "sandbox/sandbox/to-do-app", "sandbox/todo_gradio_app", "sandbox/sandbox/to-do-list", "sandbox/sandbox/calculator",
]
